--- a/CBot/CBot.csproj
+++ b/CBot/CBot.csproj
@@ -1,85 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{443CF20B-2EC3-4E17-ACED-0B741DF4B8F6}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>CBot</RootNamespace>
-    <AssemblyName>CBot</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
+    <TargetFramework>net5.0</TargetFramework>
+	<LangVersion>preview</LangVersion>
+	<Version>4.0.0</Version>
+	<Company>Andrio Celos</Company>
+	<Authors>Andrio Celos</Authors>
+	<Copyright>© 2012-2021 Andrea Giannone</Copyright>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\packages\System.ValueTuple.4.5.0-preview2-26406-04\lib\netstandard1.0\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
-    <Reference Include="System.Xml" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+
   <ItemGroup>
-    <Compile Include="Account.cs" />
-    <Compile Include="Attributes.cs" />
-    <Compile Include="AutoJoinChannel.cs" />
-    <Compile Include="Bot.cs" />
-    <Compile Include="ClientEntry.cs" />
-    <Compile Include="CommandScope.cs" />
-    <Compile Include="Config.cs" />
-    <Compile Include="ConsoleClient.cs" />
-    <Compile Include="ConsoleUtils.cs" />
-    <Compile Include="EventArgs.cs" />
-    <Compile Include="Heap.cs" />
-    <Compile Include="Identification.cs" />
-    <Compile Include="IniConfig.cs" />
-    <Compile Include="IniReader.cs" />
-    <Compile Include="InvalidPluginException.cs" />
-    <Compile Include="NickServSettings.cs" />
-    <Compile Include="Plugin.cs" />
-    <Compile Include="PluginCollection.cs" />
-    <Compile Include="PluginEntry.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SayOptions.cs" />
+    <ProjectReference Include="..\AnIRC\AnIRC\AnIRC.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\AnIRC\AnIRC\AnIRC.csproj">
-      <Project>{0F38DD6F-9BC0-480B-8695-6F50ACB8A8C7}</Project>
-      <Name>AnIRC</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+
 </Project>
